--- a/benchmarks/daxpy_5kk/clean_code/Makefile.discopop
+++ b/benchmarks/daxpy_5kk/clean_code/Makefile.discopop
@@ -12,11 +12,11 @@ daxpy.o:
 
 patterns:
 	./prog
-	cd .discopop && discopop_explorer && discopop_patch_generator
+	cd .discopop && discopop_explorer && discopop_patch_generator && discopop_optimizer
 
 patterns_cpu:
 	./prog
-	cd .discopop && discopop_explorer --enable-patterns=reduction,doall,pipeline,geodec && discopop_patch_generator
+	cd .discopop && discopop_explorer --enable-patterns=reduction,doall,pipeline,geodec && discopop_patch_generator && discopop_optimizer
 
 clean: 
 	rm -f prog
