--- a/benchmarks/daxpy/50k/Makefile
+++ b/benchmarks/daxpy/50k/Makefile
@@ -1,16 +1,25 @@
-cpu: clean setup measure_baseline
+COMMAND=code/prog
 
-measure_baseline:
-	echo "BL"
+cpu: clean setup_env measure_baseline
 
-setup:
-	echo "ID;time;" > measurements.csv
+measure_baseline: reset_env
+	mkdir -p logs/baseline
+	cd code && cmake . && make
+	/usr/bin/time --format="baseline;%e;%x;" --append --output=measurements.csv ${COMMAND} 1>> logs/baseline/stdout.txt 2>> logs/baseline/stderr.txt
+
+setup_env:
+	echo "ID; time; return_code;" > measurements.csv
+
+reset_env:
 	cp -r ../../../clean_code/daxpy/50k code
 
 
 clean: 
 	rm -rvf code
 	rm -rvf dp_folder
+	rm -rvf logs
+	rm -rvf measurements.csv
+
 
 
 
