daxpy.50k: Added compiler configuration

--- a/benchmarks/daxpy/50k/Makefile
+++ b/benchmarks/daxpy/50k/Makefile
@@ -1,11 +1,17 @@
 COMMAND=code/prog
+CC=clang
+CXX=clang++
+CPU_CC_FLAGS="-fopenmp"
+CPU_CXX_FLAGS="-fopenmp"
+GPU_CC_FLAGS="-fopenmp -fopenmp-targets=nvptx64"
+GPU_CXX_FLAGS="-fopenmp -fopenmp-targets=nvptx64"
 
-cpu: clean setup_env measure_baseline
+cpu: clean setup_env cpu_measure_sequential
 
-measure_baseline: reset_env
-	mkdir -p logs/baseline
-	cd code && cmake . && make
-	/usr/bin/time --format="baseline;%e;%x;" --append --output=measurements.csv ${COMMAND} 1>> logs/baseline/stdout.txt 2>> logs/baseline/stderr.txt
+cpu_measure_sequential: reset_env
+	mkdir -p logs/sequential
+	cd code && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
+	/usr/bin/time --format="sequential;%e;%x;" --append --output=measurements.csv ${COMMAND} 1>> logs/sequential/stdout.txt 2>> logs/sequential/stderr.txt
 
 setup_env:
 	echo "ID; time; return_code;" > measurements.csv
