--- a/benchmarks/daxpy/50k/Makefile
+++ b/benchmarks/daxpy/50k/Makefile
@@ -6,6 +6,7 @@ GPU_CC_FLAGS="-fopenmp -fopenmp-targets=nvptx64"
 GPU_CXX_FLAGS="-fopenmp -fopenmp-targets=nvptx64"
 DP_OPTIMIZER_FLAGS=--doall-microbench-file ../../../../configuration/doall_1.json --reduction-microbench-file ../../../../configuration/reduction.json
 
+########## CPU
 cpu: cpu_prepare_code cpu_compile cpu_measure
 
 cpu_prepare_code: 
@@ -24,14 +25,38 @@ cpu_measure:
 	make measure_sequential
 	make measure_cpu_exhaustive_optimum
 	make measure_cpu_evolutionary_optimum
-	
 
 cpu_cleanup:
 	make cleanup_sequential
 	make cleanup_cpu_exhaustive_optimum
 	make cleanup_cpu_evolutionary_optimum
 
+######### GPU
+gpu: gpu_prepare_code gpu_compile gpu_measure
 
+gpu_prepare_code: 
+	make clean
+	make setup_env
+	make prepare_sequential
+	make prepare_gpu_exhaustive_optimum
+	make prepare_gpu_evolutionary_optimum
+
+gpu_compile:
+	make compile_sequential
+	make compile_gpu_exhaustive_optimum
+	make compile_gpu_evolutionary_optimum
+
+gpu_measure:
+	make measure_sequential
+	make measure_gpu_exhaustive_optimum
+	make measure_gpu_evolutionary_optimum	
+
+gpu_cleanup:
+	make cleanup_sequential
+	make cleanup_gpu_exhaustive_optimum
+	make cleanup_gpu_evolutionary_optimum
+
+##### DISCOPOP 
 get_discopop_patterns:
 	make reset_env
 	cd code && cmake -DCMAKE_C_COMPILER=discopop_cc -DCMAKE_CXX_COMPILER=discopop_cxx . && make
@@ -83,6 +108,36 @@ compile_cpu_evolutionary_optimum:
 measure_cpu_evolutionary_optimum:
 	/usr/bin/time --format="cpu_evolutionary;%e;%x;" --append --output=measurements.csv code_cpu_evolutionary_optimum/prog 1>> logs/cpu_evolutionary/stdout.txt 2>> logs/cpu_evolutionary/stderr.txt
 
+##### GPU EXHAUSTIVE
+cleanup_gpu_exhaustive_optimum:
+	rm -rvf code_gpu_exhaustive_optimum
+prepare_gpu_exhaustive_optimum: cleanup_gpu_exhaustive_optimum get_discopop_patterns
+	make reset_env
+	cd dp_folder && pwd && discopop_optimizer -v -x ${DP_OPTIMIZER_FLAGS} --system-configuration ../../../../configuration/system_configuration.json
+	cd dp_folder && discopop_patch_generator -v -fcf optimizer/updated_configuration.json
+	cd dp_folder && discopop_patch_applicator -v -fcf optimizer/updated_configuration.json
+	mv code code_gpu_exhaustive_optimum
+	mkdir -p logs/gpu_exhaustive
+compile_gpu_exhaustive_optimum:
+	cd code_gpu_exhaustive_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${GPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${GPU_CXX_FLAGS} . && make
+measure_gpu_exhaustive_optimum:
+	/usr/bin/time --format="gpu_exhaustive;%e;%x;" --append --output=measurements.csv code_gpu_exhaustive_optimum/prog 1>> logs/gpu_exhaustive/stdout.txt 2>> logs/gpu_exhaustive/stderr.txt
+
+##### GPU EVOLUTIONARY
+cleanup_gpu_evolutionary_optimum:
+	rm -rvf code_gpu_evolutionary_optimum
+prepare_gpu_evolutionary_optimum: cleanup_gpu_evolutionary_optimum get_discopop_patterns
+	make reset_env
+	cd dp_folder && pwd && discopop_optimizer -v ${DP_OPTIMIZER_FLAGS} --system-configuration ../../../../configuration/system_configuration.json
+	cd dp_folder && discopop_patch_generator -v -fcf optimizer/updated_configuration.json
+	cd dp_folder && discopop_patch_applicator -v -fcf optimizer/updated_configuration.json
+	mv code code_gpu_evolutionary_optimum
+	mkdir -p logs/gpu_evolutionary
+compile_gpu_evolutionary_optimum:
+	cd code_gpu_evolutionary_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${GPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${GPU_CXX_FLAGS} . && make
+measure_gpu_evolutionary_optimum:
+	/usr/bin/time --format="gpu_evolutionary;%e;%x;" --append --output=measurements.csv code_gpu_evolutionary_optimum/prog 1>> logs/gpu_evolutionary/stdout.txt 2>> logs/gpu_evolutionary/stderr.txt
+
 #####
 setup_env:
 	echo "ID; time; return_code;" > measurements.csv
@@ -102,7 +157,8 @@ clean:
 	rm -rvf dp_folder
 	rm -rvf measurements.csv
 	rm -rvf logs
-
+	make cpu_cleanup
+	make gpu_cleanup
 
 
 
