--- a/benchmarks/daxpy/Makefile
+++ b/benchmarks/daxpy/Makefile
@@ -1,8 +1,11 @@
 cpu:
 	cd 50k && make cpu
+	cd 5kk && make cpu
 
 gpu:
 	cd 50k && make gpu
+	cd 5kk && make gpu
 
 clean:
 	cd 50k && make clean
+	cd 5kk && make clean
