--- a/benchmarks/daxpy/5kk/Makefile
+++ b/benchmarks/daxpy/5kk/Makefile
@@ -74,7 +74,7 @@ prepare_sequential: cleanup_sequential
 	mv code code_sequential
 	mkdir -p logs/sequential
 compile_sequential:
-	cd code_sequential && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
+	-cd code_sequential && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
 measure_sequential:
 	/usr/bin/time --format="sequential;%e;%x;" --append --output=measurements.csv code_sequential/prog 1>> logs/sequential/stdout.txt 2>> logs/sequential/stderr.txt
 
@@ -89,7 +89,7 @@ prepare_cpu_exhaustive_optimum: cleanup_cpu_exhaustive_optimum get_discopop_patt
 	mv code code_cpu_exhaustive_optimum
 	mkdir -p logs/cpu_exhaustive
 compile_cpu_exhaustive_optimum:
-	cd code_cpu_exhaustive_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
+	-cd code_cpu_exhaustive_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
 measure_cpu_exhaustive_optimum:
 	/usr/bin/time --format="cpu_exhaustive;%e;%x;" --append --output=measurements.csv code_cpu_exhaustive_optimum/prog 1>> logs/cpu_exhaustive/stdout.txt 2>> logs/cpu_exhaustive/stderr.txt
 
@@ -104,7 +104,7 @@ prepare_cpu_evolutionary_optimum: cleanup_cpu_evolutionary_optimum get_discopop_
 	mv code code_cpu_evolutionary_optimum
 	mkdir -p logs/cpu_evolutionary
 compile_cpu_evolutionary_optimum:
-	cd code_cpu_evolutionary_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
+	-cd code_cpu_evolutionary_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
 measure_cpu_evolutionary_optimum:
 	/usr/bin/time --format="cpu_evolutionary;%e;%x;" --append --output=measurements.csv code_cpu_evolutionary_optimum/prog 1>> logs/cpu_evolutionary/stdout.txt 2>> logs/cpu_evolutionary/stderr.txt
 
@@ -119,7 +119,7 @@ prepare_gpu_exhaustive_optimum: cleanup_gpu_exhaustive_optimum get_discopop_patt
 	mv code code_gpu_exhaustive_optimum
 	mkdir -p logs/gpu_exhaustive
 compile_gpu_exhaustive_optimum:
-	cd code_gpu_exhaustive_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${GPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${GPU_CXX_FLAGS} . && make
+	-cd code_gpu_exhaustive_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${GPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${GPU_CXX_FLAGS} . && make
 measure_gpu_exhaustive_optimum:
 	/usr/bin/time --format="gpu_exhaustive;%e;%x;" --append --output=measurements.csv code_gpu_exhaustive_optimum/prog 1>> logs/gpu_exhaustive/stdout.txt 2>> logs/gpu_exhaustive/stderr.txt
 
@@ -134,7 +134,7 @@ prepare_gpu_evolutionary_optimum: cleanup_gpu_evolutionary_optimum get_discopop_
 	mv code code_gpu_evolutionary_optimum
 	mkdir -p logs/gpu_evolutionary
 compile_gpu_evolutionary_optimum:
-	cd code_gpu_evolutionary_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${GPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${GPU_CXX_FLAGS} . && make
+	-cd code_gpu_evolutionary_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${GPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${GPU_CXX_FLAGS} . && make
 measure_gpu_evolutionary_optimum:
 	/usr/bin/time --format="gpu_evolutionary;%e;%x;" --append --output=measurements.csv code_gpu_evolutionary_optimum/prog 1>> logs/gpu_evolutionary/stdout.txt 2>> logs/gpu_evolutionary/stderr.txt
 
