--- a/benchmarks/daxpy/50k/Makefile
+++ b/benchmarks/daxpy/50k/Makefile
@@ -74,9 +74,9 @@ prepare_sequential: cleanup_sequential
 	mv code code_sequential
 	mkdir -p logs/sequential
 compile_sequential:
-	cd code_sequential && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
+	-cd code_sequential && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
 measure_sequential:
-	/usr/bin/time --format="sequential;%e;%x;" --append --output=measurements.csv code_sequential/prog 1>> logs/sequential/stdout.txt 2>> logs/sequential/stderr.txt
+	-/usr/bin/time --format="sequential;%e;%x;" --append --output=measurements.csv code_sequential/prog 1>> logs/sequential/stdout.txt 2>> logs/sequential/stderr.txt
 
 ##### CPU EXHAUSTIVE
 cleanup_cpu_exhaustive_optimum:
@@ -89,9 +89,9 @@ prepare_cpu_exhaustive_optimum: cleanup_cpu_exhaustive_optimum get_discopop_patt
 	mv code code_cpu_exhaustive_optimum
 	mkdir -p logs/cpu_exhaustive
 compile_cpu_exhaustive_optimum:
-	cd code_cpu_exhaustive_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
+	-cd code_cpu_exhaustive_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
 measure_cpu_exhaustive_optimum:
-	/usr/bin/time --format="cpu_exhaustive;%e;%x;" --append --output=measurements.csv code_cpu_exhaustive_optimum/prog 1>> logs/cpu_exhaustive/stdout.txt 2>> logs/cpu_exhaustive/stderr.txt
+	-/usr/bin/time --format="cpu_exhaustive;%e;%x;" --append --output=measurements.csv code_cpu_exhaustive_optimum/prog 1>> logs/cpu_exhaustive/stdout.txt 2>> logs/cpu_exhaustive/stderr.txt
 
 ##### CPU EVOLUTIONARY
 cleanup_cpu_evolutionary_optimum:
@@ -104,9 +104,9 @@ prepare_cpu_evolutionary_optimum: cleanup_cpu_evolutionary_optimum get_discopop_
 	mv code code_cpu_evolutionary_optimum
 	mkdir -p logs/cpu_evolutionary
 compile_cpu_evolutionary_optimum:
-	cd code_cpu_evolutionary_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
+	-cd code_cpu_evolutionary_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
 measure_cpu_evolutionary_optimum:
-	/usr/bin/time --format="cpu_evolutionary;%e;%x;" --append --output=measurements.csv code_cpu_evolutionary_optimum/prog 1>> logs/cpu_evolutionary/stdout.txt 2>> logs/cpu_evolutionary/stderr.txt
+	-/usr/bin/time --format="cpu_evolutionary;%e;%x;" --append --output=measurements.csv code_cpu_evolutionary_optimum/prog 1>> logs/cpu_evolutionary/stdout.txt 2>> logs/cpu_evolutionary/stderr.txt
 
 ##### GPU EXHAUSTIVE
 cleanup_gpu_exhaustive_optimum:
