daxpy_modified.5kk: added

--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -1,11 +1,15 @@
 all:
 	cd daxpy && make all
+	cd daxpy_modified && make all
 
 cpu:
 	cd daxpy && make cpu
+	cd daxpy_modified && make cpu
 
 gpu:
 	cd daxpy && make gpu
+	cd daxpy_modified && make gpu
 
 clean:
 	cd daxpy && make clean
+	cd daxpy_modified && make clean
