added daxpy_collapsable: 500k

--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -1,15 +1,19 @@
 all:
 	cd daxpy && make all
 	cd daxpy_modified && make all
+	cd daxpy_collapsable && make all
 
 cpu:
 	cd daxpy && make cpu
 	cd daxpy_modified && make cpu
+	cd daxpy_collapsable && make cpu
 
 gpu:
 	cd daxpy && make gpu
 	cd daxpy_modified && make gpu
+	cd daxpy_collapsable && make gpu
 
 clean:
 	cd daxpy && make clean
 	cd daxpy_modified && make clean
+	cd daxypy_collapsable && make clean
